--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -95,9 +95,10 @@ body {
 	cursor:pointer;
 }
 
-.hasAccountText {
+.hasAccountText span {
 	font-weight: bold;
     font-size: 12px;
+    cursor: pointer;
 }
 
 .hasAccountText {
