--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -75,6 +75,7 @@ body {
 	color: #bac7da;
     font-size: 13px;
     margin-top: 15px;
+    display: block;
 }
 
 #inputContainer button {
@@ -116,8 +117,8 @@ body {
 }
 
 #loginText h1 {
-	color: #5e9ca9;
-	font-size: 60px;
+	color: #bac7da;
+	font-size: 40px;
 	font-weight: bold;
 }
 
@@ -132,7 +133,14 @@ body {
 #loginText li {
 	font-size: 20px;
 	list-style-type: none;
-	padding: 10px;
+	padding: 5px 30px;
+	background: url(../images/icons/checkmark.png) no-repeat 0 0;
+}
+
+#inputContainer .errorMessage {
+	color: #bac7da;
+	font-size: 12px;
+	display: block;
 }
 
 
