--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,3 +19,40 @@ html, body {
 	padding: 16px;
 	box-sizing: border-box;
 }
+
+#nowPlayingLeft,
+#nowPlayingLeft {
+	width: 30%;
+	min-width: 180px;
+}
+
+#nowPlayingCenter {
+	width: 40%;
+	min-width: 700px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+#nowPlayingBar .content {
+	width: 100%;
+}
+
+.playerControls .buttons {
+	margin: 0 auto;
+	display: table;
+}
+
+.controlButton {
+	background-color: transparent;
+	border: none;
+	vertical-align: middle;
+}
+
+.controlButton img {
+	width: 20px;
+	height: 20px;
+}
+
+
+
