--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ html, body {
 
 #nowPlayingCenter {
 	width: 40%;
-	min-width: 700px;
+	/*min-width: 700px;*/
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -36,6 +36,7 @@ html, body {
 
 #nowPlayingBar .content {
 	width: 100%;
+	height: 57px;
 }
 
 .playerControls .buttons {
@@ -97,6 +98,15 @@ html, body {
 
 .playbackBar .progressBar {
 	margin-top: 3px;
+}
+
+#nowPlayingLeft .albumArtwork {
+	height: 100%;
+    max-width: 57px;
+    max-height: 60px;
+    margin-right: 15px;
+    float: left;
+	background-size: cober;
 }
 
 
