--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,11 @@ html, body {
 	height: 100%;
 }
 
+* {
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	color: #fff;
+}
+
 #nowPlayingContainer {
 	width: 100%;
 	background-color: #282828;
@@ -109,4 +114,17 @@ html, body {
 	background-size: cober;
 }
 
+#nowPlayingLeft .trackInfo {
+	display: table;
+}
 
+#nowPlayingLeft .trackInfo .trackName {
+	margin: 6px 0;
+	display: inline-block;
+	width: 100%;
+}
+
+#nowPlayingLeft .trackInfo .artistName span {
+	font-size: 12px;
+	color: #a0a0a0;
+}
