--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,9 +31,11 @@ html, body {
 	min-width: 180px;
 }
 
+
+
 #nowPlayingCenter {
 	width: 40%;
-	/*min-width: 700px;*/
+	min-width: 100px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -127,4 +129,15 @@ html, body {
 #nowPlayingLeft .trackInfo .artistName span {
 	font-size: 12px;
 	color: #a0a0a0;
+}
+
+.volumeBar {
+	width: 180px;
+    position: absolute;
+    right: 0;
+}
+
+.volumeBar .progressBar {
+	width: 125px;
+	margin: 23px 0;
 }
