--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,13 +9,19 @@ html, body {
 	color: #fff;
 }
 
+body {
+	background-color: #181818;
+	font-size: 14px;
+	min-width: 720px;
+}
+
 #nowPlayingContainer {
 	width: 100%;
 	background-color: #282828;
 	bottom: 0;
 	position: fixed;
 	min-width: 620px;
-	
+	background: url(../images/bg.jpg);
 }
 
 #nowPlayingBar {
@@ -197,3 +203,23 @@ html, body {
 	top: 6px;
 	width: 25px;
 }
+
+
+#mainViewContainer {
+	margin-left: 220px;
+	padding-bottom: 90px;
+	width: calc(100% - 220px);
+
+}
+
+#mainContent {
+	padding: 0 20px;
+
+}
+
+
+
+
+
+
+
