fetching album id from url

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ html, body {
 * {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	color: #fff;
+	letter-spacing: 1px;
 }
 
 body {
@@ -228,11 +229,28 @@ body {
 	width: 29%;
 	max-width: 200px;
 	min-width: 150px;
+	margin-bottom: 20px;
 }
 
 .gridViewItem img {
 	width: 100%;
 }
+
+.gridViewInfo {
+	font-weight: 300;
+	padding: 5px 0;
+	text-align: center;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
+}
+
+.gridViewItem a {
+	text-decoration: none;
+}
+
+
+
 
 
 
